cmake_minimum_required(VERSION 2.8)

project(aoj_cpp CXX)

add_subdirectory(ALDS1_1_A)
add_subdirectory(ALDS1_1_D)


add_subdirectory(ALDS1_3_A)
add_subdirectory(ALDS1_3_B)

add_subdirectory(ITP1_1_B)
add_subdirectory(ALDS1_3_C)
add_subdirectory(ALDS1_2_B)
add_subdirectory(ALDS1_2_C)
add_subdirectory(ALDS1_4_A)
add_subdirectory(ALDS1_4_B)
add_subdirectory(ALDS1_11_A)
add_subdirectory(ALDS1_11_B)
add_subdirectory(ALDS1_5_A)
add_subdirectory(Ex_Combination)
